<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff447881">

    <TextView android:text="@string/my_app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/button_streamer"
        android:layout_below="@+id/textView"
        android:layout_marginTop="25dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:background="#F08C35"
        android:onClick="showStreamerToast"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button_scores_app"
        android:layout_marginTop="25dp"
        android:background="#F08C35"
        android:onClick="showScoresToast"
        android:layout_gravity="center"
        android:layout_below="@+id/button_streamer"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@+id/button_streamer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button_library_app"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/button_scores_app"
        android:layout_alignRight="@+id/button_scores_app"
        android:layout_alignEnd="@+id/button_scores_app"
        android:background="#F08C35"
        android:layout_alignLeft="@+id/button_scores_app"
        android:layout_alignStart="@+id/button_scores_app"
        android:onClick="showLibraryToast"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_better"
        android:id="@+id/button_build"
        android:layout_marginTop="25dp"
        android:background="#F08C35"
        android:onClick="showBuildItBiggerToast"
        android:layout_gravity="center"
        android:layout_below="@+id/button_library_app"
        android:layout_alignLeft="@+id/button_library_app"
        android:layout_alignStart="@+id/button_library_app"
        android:layout_alignRight="@+id/button_library_app"
        android:layout_alignEnd="@+id/button_library_app" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button_xyz_reader"
        android:background="#F08C35"
        android:onClick="showXyzReaderToast"
        android:layout_gravity="center"
        android:layout_above="@+id/button_capstone"
        android:layout_alignLeft="@+id/button_build"
        android:layout_alignStart="@+id/button_build"
        android:layout_marginBottom="33dp"
        android:layout_alignRight="@+id/button_build"
        android:layout_alignEnd="@+id/button_build" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_own_app"
        android:id="@+id/button_capstone"
        android:background="#fff02d3c"
        android:onClick="showMyOwnAppToast"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button_xyz_reader"
        android:layout_alignStart="@+id/button_xyz_reader"
        android:layout_alignRight="@+id/button_xyz_reader"
        android:layout_alignEnd="@+id/button_xyz_reader" />

</RelativeLayout>
